--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
 		<img src="img/logo.png" alt = "logo" class="header__logo">
 		<nav class="user-nav">
 			<ul class="user-nav__list">
-				<li class="user-nav__item"> <a href="#" class="user-nav__link" id ="active" style="color: #db3236">About</a></li>
-				<li class="user-nav__item"> <a href="#" class="user-nav__link" style="color:  #4885ed">Team</a></li>
-				<li class="user-nav__item"> <a href="#" class="user-nav__link" style="color: #3cba54">Events</a></li>
-				<li class="user-nav__item"> <a href="#" class="user-nav__link" style="color: #f4c20d">Contact</a></li>
+				<li class="user-nav__item"> <a href="#" class="user-nav__link" >About</a></li>
+				<li class="user-nav__item"> <a href="#" class="user-nav__link" >Team</a></li>
+				<li class="user-nav__item"> <a href="#" class="user-nav__link" >Events</a></li>
+				<li class="user-nav__item"> <a href="#" class="user-nav__link" >Contact</a></li>
 			</ul>
 		</nav>
 	</header>
 
-	<div class="container">
-	</div>
 </body>
 </html>
