add intro section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="shortcut icon" type="image/png" href="img/logo.png">
 </head>
-<body>
+<body >
+
 	<header class="header">
 		<img src="img/logo.png" alt = "logo" class="header__logo">
 		<nav class="user-nav">
@@ -25,16 +26,30 @@
 	<div class="banner">
 		<div class="banner-main">
            <div class="banner-main__title">
-         <h1>University Institute of <span >Engineering and Technology </span></h1>
+         <h1>University Institute of <span class="underlined">Engineering and</span>
+			<span class="underlined"> Technology </span></h1>
 		   </div>
 		   
 		   <a class="btn btn-blue btn-animate" href="#">Join Us</a>
 		   
 	</div>
-		<div class="banner-img-div">
+		<div class="banner-img">
       <img src="./img//DSC-banner.webp" alt="banner" >
 		</div>
 	</div>
+
+	<section class="intro">
+		<div class="intro-img">
+        <img src="./img/logo24.png" alt="DSC">
+		</div>
+		<div class="intro-text">
+			<h2 class="intro-heading">What is <span class="underlined"></span>DSC</span>?</h2>
+			<p >
+				Developer Student Clubs are university based community groups for students interested in Google developer technologies. </p>
+			<p>	Students from all undergraduate or graduate programs with an interest in growing as a developer are welcome.</p>
+			
+		</div>
+	</section>
 
 </body>
 </html>
