--- a/index.html
+++ b/index.html
@@ -25,16 +25,49 @@
 	<div class="banner">
 		<div class="banner-main">
            <div class="banner-main__title">
-         <h1>University Institute of <span >Engineering and Technology </span></h1>
-		   </div>
-		   
-		   <a class="btn btn-blue btn-animate" href="#">Join Us</a>
-		   
-	</div>
+         		<h1>University Institute of <span >Engineering and Technology </span></h1>
+		   </div> 
+		   <a class="btn btn-blue btn-animate" href="#">Join us</a>   
+		</div>
+
 		<div class="banner-img-div">
-      <img src="./img//DSC-banner.webp" alt="banner" >
+<!--       		<img src="./img//DSC-banner.webp" alt="banner" > -->
+			<iframe width="697" height="392" src="https://www.youtube.com/embed/qWrc2blCWUo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 		</div>
 	</div>
+
+	<section class="events">
+		<h1 class="event-type"> Upcoming Events </h1>
+		<div class="event-cards">
+			<div class="card card--1">
+				<div class="card__head">
+					<h2 class="card__title"> 30 days of cloud </h2>
+					<div class="card__date"> October 10, 2020 </div>
+				</div>
+				<div class="card__status"> Happening Online </div>
+			</div>
+			<div class="card card--2">
+				<div class="card__head">
+					<h2 class="card__title"> Hacktober Fest </h2>
+					<div class="card__date"> October 10, 2020 </div>
+				</div>
+				<div class="card__status"> Happening Online </div>
+			</div>
+		</div>
+	</section>
+
+	<section class="events">
+		<h1 class="event-type"> Past Events </h1>
+		<div class="event-cards">
+			<div class="card  card--2-1">
+				<div class="card__head">
+					<h2 class="card__title"> Introduction Session </h2>
+					<div class="card__date"> September 28, 2020 </div>
+				</div>
+				<div class="card__status"> Conducted Online </div>
+			</div>
+	</section>
 
 </body>
 </html>
