add organisers div

--- a/index.html
+++ b/index.html
@@ -54,28 +54,35 @@
 			</div>
 	</section>
 	<section class="section__organisers">
-	   <h2>Our Organisers</h2>
+	   <h2 class="heading-secondary">Our
+			<span class="underlined">Organisers</span>
+		</h2>
 	   <div class="organisers-row">
 		   <div class="profile-card">
 			   <img class="profile-pic" src="img/profile.jpg" alt="profile-icon">
-			    <p class="profile-name">Name</p>
+				<p class="profile-name">Name</p>
+				<p class="profile-role">Lead</p>
 		   </div>
 
 		   <div class="profile-card">
 			<img class="profile-pic" src="img/profile.jpg" alt="profile-icon">
 			 <p class="profile-name">Name</p>
+			 <p class="profile-role">Lead</p>
 		</div>
 		<div class="profile-card">
 			<img class="profile-pic" src="img/profile.jpg" alt="profile-icon">
 			 <p class="profile-name">Name</p>
+			 <p class="profile-role">Lead</p>
 		</div>
 		<div class="profile-card">
 			<img class="profile-pic" src="img/profile.jpg" alt="profile-icon">
 			 <p class="profile-name">Name</p>
+			 <p class="profile-role">Lead</p>
 		</div>
 		<div class="profile-card">
 			<img class="profile-pic" src="img/profile.jpg" alt="profile-icon">
 			 <p class="profile-name">Name</p>
+			 <p class="profile-role">Lead</p>
 		</div>
 
 		   
