Changes in Card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<img src="img/logo.png" alt = "logo" class="header__logo">
 		<nav class="user-nav">
 			<ul class="user-nav__list">
-				<li class="user-nav__item"> <a href="#" class="user-nav__link" >About</a></li>
+				<li class="user-nav__item"> <a href="#" class="user-nav__link active" >About</a></li>
 				<li class="user-nav__item"> <a href="#" class="user-nav__link" >Team</a></li>
 				<li class="user-nav__item"> <a href="#" class="user-nav__link" >Events</a></li>
 				<li class="user-nav__item"> <a href="#" class="user-nav__link" >Contact</a></li>
@@ -41,18 +41,22 @@
 		<h1 class="event-type"> Upcoming Events </h1>
 		<div class="event-cards">
 			<div class="card card--1">
-				<div class="card__head">
+				<div class="card__head u-margin-bottom">
 					<h2 class="card__title"> 30 days of cloud </h2>
 					<div class="card__date"> October 10, 2020 </div>
 				</div>
-				<div class="card__status"> Happening Online </div>
+				<div class="card__status u-margin-bottom"> Happening Online </div>
+				<a href="#" class="card__btn card__btn--1 ">RSVP now</a>
+
 			</div>
 			<div class="card card--2">
-				<div class="card__head">
+				<div class="card__head u-margin-bottom">
 					<h2 class="card__title"> Hacktober Fest </h2>
 					<div class="card__date"> October 10, 2020 </div>
 				</div>
-				<div class="card__status"> Happening Online </div>
+				<div class="card__status u-margin-bottom "> Happening Online </div>
+				<a href = "#" class="card__btn card__btn--2">Coming Soon</a>
+
 			</div>
 		</div>
 	</section>
@@ -61,11 +65,12 @@
 		<h1 class="event-type"> Past Events </h1>
 		<div class="event-cards">
 			<div class="card  card--2-1">
-				<div class="card__head">
+				<div class="card__head u-margin-bottom">
 					<h2 class="card__title"> Introduction Session </h2>
 					<div class="card__date"> September 28, 2020 </div>
 				</div>
-				<div class="card__status"> Conducted Online </div>
+				<div class="card__status u-margin-bottom"> Conducted Online </div>
+				<a href="#" class="card__btn card__btn--2-1">View more</a>
 			</div>
 	</section>
 
